Use new 'clamp' methods #38